--- a/assets/style/css/frontpage.css
+++ b/assets/style/css/frontpage.css
@@ -17,7 +17,7 @@
   --bs-secondary: #6c757d;
   --bs-success: #328614;
   --bs-info: #0dcaf0;
-  --bs-warning: #c77916;
+  --bs-warning: #e98028;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #1F2227;
@@ -1805,15 +1805,15 @@ progress {
 }
 
 .table-warning {
-  --bs-table-bg: #f4e4d0;
-  --bs-table-striped-bg: #e8d9c6;
+  --bs-table-bg: #fbe6d4;
+  --bs-table-striped-bg: #eedbc9;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #dccdbb;
+  --bs-table-active-bg: #e2cfbf;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e2d3c0;
+  --bs-table-hover-bg: #e8d5c4;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #dccdbb;
+  border-color: #e2cfbf;
 }
 
 .table-danger {
@@ -2779,32 +2779,32 @@ textarea.form-control-lg {
 
 .btn-warning {
   color: #000;
-  background-color: #c77916;
-  border-color: #c77916;
+  background-color: #e98028;
+  border-color: #e98028;
 }
 .btn-warning:hover {
   color: #000;
-  background-color: #cf8d39;
-  border-color: #cd862d;
+  background-color: #ec9348;
+  border-color: #eb8d3e;
 }
 .btn-check:focus + .btn-warning, .btn-warning:focus {
   color: #000;
-  background-color: #cf8d39;
-  border-color: #cd862d;
-  box-shadow: 0 0 0 0.25rem rgba(169, 103, 19, 0.5);
+  background-color: #ec9348;
+  border-color: #eb8d3e;
+  box-shadow: 0 0 0 0.25rem rgba(198, 109, 34, 0.5);
 }
 .btn-check:checked + .btn-warning, .btn-check:active + .btn-warning, .btn-warning:active, .btn-warning.active, .show > .btn-warning.dropdown-toggle {
   color: #000;
-  background-color: #d29445;
-  border-color: #cd862d;
+  background-color: #ed9953;
+  border-color: #eb8d3e;
 }
 .btn-check:checked + .btn-warning:focus, .btn-check:active + .btn-warning:focus, .btn-warning:active:focus, .btn-warning.active:focus, .show > .btn-warning.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(169, 103, 19, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(198, 109, 34, 0.5);
 }
 .btn-warning:disabled, .btn-warning.disabled {
   color: #000;
-  background-color: #c77916;
-  border-color: #c77916;
+  background-color: #e98028;
+  border-color: #e98028;
 }
 
 .btn-danger {
@@ -2998,27 +2998,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-warning {
-  color: #c77916;
-  border-color: #c77916;
+  color: #e98028;
+  border-color: #e98028;
 }
 .btn-outline-warning:hover {
   color: #000;
-  background-color: #c77916;
-  border-color: #c77916;
+  background-color: #e98028;
+  border-color: #e98028;
 }
 .btn-check:focus + .btn-outline-warning, .btn-outline-warning:focus {
-  box-shadow: 0 0 0 0.25rem rgba(199, 121, 22, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(233, 128, 40, 0.5);
 }
 .btn-check:checked + .btn-outline-warning, .btn-check:active + .btn-outline-warning, .btn-outline-warning:active, .btn-outline-warning.active, .btn-outline-warning.dropdown-toggle.show {
   color: #000;
-  background-color: #c77916;
-  border-color: #c77916;
+  background-color: #e98028;
+  border-color: #e98028;
 }
 .btn-check:checked + .btn-outline-warning:focus, .btn-check:active + .btn-outline-warning:focus, .btn-outline-warning:active:focus, .btn-outline-warning.active:focus, .btn-outline-warning.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(199, 121, 22, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(233, 128, 40, 0.5);
 }
 .btn-outline-warning:disabled, .btn-outline-warning.disabled {
-  color: #c77916;
+  color: #e98028;
   background-color: transparent;
 }
 
@@ -4423,12 +4423,12 @@ textarea.form-control-lg {
 }
 
 .alert-warning {
-  color: #77490d;
-  background-color: #f4e4d0;
-  border-color: #eed7b9;
+  color: #8c4d18;
+  background-color: #fbe6d4;
+  border-color: #f8d9bf;
 }
 .alert-warning .alert-link {
-  color: #5f3a0a;
+  color: #703e13;
 }
 
 .alert-danger {
@@ -4782,17 +4782,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-warning {
-  color: #77490d;
-  background-color: #f4e4d0;
+  color: #8c4d18;
+  background-color: #fbe6d4;
 }
 .list-group-item-warning.list-group-item-action:hover, .list-group-item-warning.list-group-item-action:focus {
-  color: #77490d;
-  background-color: #dccdbb;
+  color: #8c4d18;
+  background-color: #e2cfbf;
 }
 .list-group-item-warning.list-group-item-action.active {
   color: #fff;
-  background-color: #77490d;
-  border-color: #77490d;
+  background-color: #8c4d18;
+  border-color: #8c4d18;
 }
 
 .list-group-item-danger {
@@ -5799,10 +5799,10 @@ textarea.form-control-lg {
 }
 
 .link-warning {
-  color: #c77916;
+  color: #e98028;
 }
 .link-warning:hover, .link-warning:focus {
-  color: #d29445;
+  color: #ed9953;
 }
 
 .link-danger {
@@ -6190,7 +6190,7 @@ textarea.form-control-lg {
 }
 
 .border-warning {
-  border-color: #c77916 !important;
+  border-color: #e98028 !important;
 }
 
 .border-danger {
@@ -7019,7 +7019,7 @@ textarea.form-control-lg {
 }
 
 .text-warning {
-  color: #c77916 !important;
+  color: #e98028 !important;
 }
 
 .text-danger {
@@ -7075,7 +7075,7 @@ textarea.form-control-lg {
 }
 
 .bg-warning {
-  background-color: #c77916 !important;
+  background-color: #e98028 !important;
 }
 
 .bg-danger {
