--- a/assets/style/scss/_variables.scss
+++ b/assets/style/scss/_variables.scss
@@ -9,7 +9,7 @@ $red-color: #d33e33;
 $light-red: #ffe6e3;
 $green: #328614;
 $light-green: #e2f8db;
-$warning: #c77916;
+$warning: #e98028;
 $warning-light: #fff2de;
 
 $dark-33:#333;
