--- a/assets/style/scss/frontpage.scss
+++ b/assets/style/scss/frontpage.scss
@@ -1403,6 +1403,50 @@
         }
     }
 }
+.mainFraud-box{
+    .card{
+        .card-header{
+            padding:8px 12px;
+        }
+        .card-body{
+            .row{
+                [class*="col"] {
+                    padding-left:7.5px;
+                    padding-right:7.5px;
+                }
+                &.titleFRd{
+                    h2{
+                        margin-bottom:0;
+                        font-size: 16px;
+                        padding: 10px 12px;
+                        background-color: #edf3fd;
+                        border-radius: 5px;
+                        i{
+                            width: 24px;
+                            height: 24px;
+                            background-color: #000;
+                            border-radius: 50%;
+                            color: #fff;
+                            display: inline-flex;
+                            align-items: center;
+                            justify-content: center;
+                            font-size: 11px;
+                            margin-right:7px;
+                        }
+                    }
+                }
+                &.frdInput-row{
+                    // border-bottom:1px solid $border-color;
+                    margin-bottom:15px;
+                    border-bottom:1px solid #efefef;
+                    &:last-child{
+                        border-bottom:none;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 @import "responsive";
