--- a/assets/style/scss/_responsive.scss
+++ b/assets/style/scss/_responsive.scss
@@ -1,7 +1,7 @@
 @media only screen and (min-width:1200px){
-    .mainFraud-box{
-        max-width:1200px;
-    }
+    // .mainFraud-box{
+    //     max-width:1200px;
+    // }
 }
 
 @media only screen and (max-width:1350px){
@@ -35,6 +35,21 @@
             }
         } 
     } 
+    .mainFraud-box{
+        .card{
+            .card-body{
+                .row{
+                    &.titleFRd{
+                        h2{
+                            i{
+                                display:none;
+                            }
+                        } 
+                    } 
+                }
+            } 
+        } 
+    } 
 }
 
 @media only screen and (max-width:1024px){
@@ -53,6 +68,22 @@
                 // }
             }
         } 
+    }
+    .mainFraud-box{
+        .card{
+            .card-body{
+                .titleFRd{
+                    .col-md-2{
+                        max-width:90px;
+                    }
+                }
+                .frdInputRow{
+                    .col-md-2{
+                        max-width:90px;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -163,6 +194,22 @@
                 flex:1 0 50%;
             }
         }
+        .card{
+            .card-body{
+                .titleFRd{
+                    display:none;
+                    // .col-md-2{
+                    //     max-width:initial;
+                    // }
+                }
+                .frdInputRow{
+                    margin-bottom:24px;
+                    .col-md-2{
+                        max-width:initial;
+                    }
+                }
+            }
+        }
     }
 }
 @media only screen and (max-width:575px){
@@ -234,6 +281,13 @@
                     line-height:22px;
                 }
             } 
+        } 
+    } 
+    .mainFraud-box{
+        .row{
+            & > * {
+                flex: 1 0 100%;
+            }
         } 
     } 
 }
