--- a/assets/style/scss/frontpage.scss
+++ b/assets/style/scss/frontpage.scss
@@ -357,8 +357,9 @@
                             background-color: $white;
                             z-index: 9;
                             border: 1px solid $border-color;
-                            overflow-y:auto;
-                            max-height:120px;
+                            overflow-y: auto;
+                            max-height: 120px;
+
                             li {
                                 a {
                                     span {
@@ -1204,9 +1205,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: calc(100%  - 30px);
+    width: calc(100% - 30px);
     height: 100vh;
     margin: 0 15px;
+
     .alertCard {
         width: 100%;
         max-width: 750px;
@@ -1250,21 +1252,25 @@
         &.withdrawSide {
             background-color: #FCEFEA;
             border-color: #e5886f;
+
             .card-body {
                 .topImg {
                     border-color: #e5886f;
                 }
             }
         }
-        &.paymentSuccess{
+
+        &.paymentSuccess {
             background-color: #d5f1cb;
             border-color: #52b131;
+
             .card-body {
                 .topImg {
                     border-color: #52b131;
                 }
             }
         }
+
         .card-body {
             text-align: center;
             padding: 30px;
@@ -1291,7 +1297,7 @@
                 line-height: 32px;
                 font-weight: $fw-600;
                 margin-bottom: 30px;
-                color:$black;
+                color: $black;
             }
 
             h2 {
@@ -1320,114 +1326,127 @@
     }
 }
 
-.trustList-sec{
-    h1{
-        text-align:center;
-        margin-bottom:18px;
-        font-size:32px;
-        line-height:38px;
-        color:$black;
+.trustList-sec {
+    h1 {
+        text-align: center;
+        margin-bottom: 18px;
+        font-size: 32px;
+        line-height: 38px;
+        color: $black;
     }
-    .trstList{
-        display:flex;
+
+    .trstList {
+        display: flex;
         flex-direction: column;
-        margin-bottom:0;
-        padding:15px;
-        border-radius:7px;
-        box-shadow:0 5px 12px rgba($color: $black , $alpha: 0.1);
+        margin-bottom: 0;
+        padding: 15px;
+        border-radius: 7px;
+        box-shadow: 0 5px 12px rgba($color: $black , $alpha: 0.1);
         border: 1px solid #deecf7;
-        li{
+
+        li {
             display: flex;
-            align-items:center;
-            justify-content:space-between;
-            padding:6px 15px;
+            align-items: center;
+            justify-content: space-between;
+            padding: 6px 15px;
             // border:1px solid $border-color;
-            background-color:#eff0f1;
-            border-radius:5px;
-            margin-bottom:10px;
-            &:first-child{
-                margin-bottom:15px;
-                background-color:$blue;
-                border:none;
-                span{
-                    font-weight:$fw-700;
-                    color:$white;
+            background-color: #eff0f1;
+            border-radius: 5px;
+            margin-bottom: 10px;
+
+            &:first-child {
+                margin-bottom: 15px;
+                background-color: $blue;
+                border: none;
+
+                span {
+                    font-weight: $fw-700;
+                    color: $white;
                 }
             }
-            &:not(:first-child){
-                span{
-                    &:first-child{
-                        i{
-                            width:25px;
-                            height:25px;
-                            background-color:$blue;
-                            padding:5px;
-                            display:inline-flex;
-                            align-items:center;
-                            justify-content:center;
-                            border-radius:50%;
-                            color:$white;
-                            margin-right:3px;
-                            font-size:13px; 
+
+            &:not(:first-child) {
+                span {
+                    &:first-child {
+                        i {
+                            width: 25px;
+                            height: 25px;
+                            background-color: $blue;
+                            padding: 5px;
+                            display: inline-flex;
+                            align-items: center;
+                            justify-content: center;
+                            border-radius: 50%;
+                            color: $white;
+                            margin-right: 3px;
+                            font-size: 13px;
                         }
                     }
                 }
             }
-            &:last-child{
-                margin-bottom:0;
+
+            &:last-child {
+                margin-bottom: 0;
             }
         }
     }
 }
 
 
-.trustLevel-modal{
-    .modal-dialog{
-        @media only screen and (min-width:576px){
-            max-width:670px;
+.trustLevel-modal {
+    .modal-dialog {
+        @media only screen and (min-width:576px) {
+            max-width: 670px;
         }
-        .modal-content{
-            .modal-header{
-                padding-top:25px;
-                .btn-close{
-                    position:absolute;
-                    top:0px;
-                    right:0px;
-                    background-color:#fff;
-                    border-radius:50%;
-                    opacity:1;
-                    box-shadow:0 4px 8px rgba($color: $black , $alpha: 0.3);
+
+        .modal-content {
+            .modal-header {
+                padding-top: 25px;
+
+                .btn-close {
+                    position: absolute;
+                    top: 0px;
+                    right: 0px;
+                    background-color: #fff;
+                    border-radius: 50%;
+                    opacity: 1;
+                    box-shadow: 0 4px 8px rgba($color: $black , $alpha: 0.3);
                     background-size: 13px;
                 }
             }
         }
     }
 }
-.mainFraud-box{
-    .card{
-        .card-header{
-            padding:8px 12px;
+
+.mainFraud-box {
+    .card {
+        .card-header {
+            padding: 8px 12px;
         }
-        .card-body{
-            .btn{
-                &.btn-medium{
-                    margin-bottom:4px;
+
+        .card-body {
+            .btn {
+                &.btn-medium {
+                    margin-bottom: 4px;
                 }
             }
-            .row{
+
+            .row {
                 [class*="col"] {
-                    padding-left:7.5px;
-                    padding-right:7.5px;
+                    padding-left: 7.5px;
+                    padding-right: 7.5px;
                 }
-                &.titleFRd{
-                    h2{
-                        margin-bottom:0;
+
+                &.titleFRd {
+                    h2 {
+                        margin-bottom: 0;
                         font-size: 16px;
                         padding: 6px 12px;
                         background-color: #e4eaf5;
                         border-radius: 20px;
-                        display:inline-block;
-                        i{
+                        display: inline-block;
+
+                        i {
                             width: 24px;
                             height: 24px;
                             background-color: #000;
@@ -1437,16 +1456,18 @@
                             align-items: center;
                             justify-content: center;
                             font-size: 11px;
-                            margin-right:7px;
+                            margin-right: 7px;
                         }
                     }
                 }
-                &.frdInput-row{
+
+                &.frdInput-row {
                     // border-bottom:1px solid $border-color;
-                    margin-bottom:15px;
-                    border-bottom:1px solid #efefef;
-                    &:last-child{
-                        border-bottom:none;
+                    margin-bottom: 15px;
+                    border-bottom: 1px solid #efefef;
+
+                    &:last-child {
+                        border-bottom: none;
                     }
                 }
             }
@@ -1454,5 +1475,152 @@
     }
 }
 
+.apiAllowed-sec {
+    height: calc(100% - 50px);
+
+    .card-body {
+        .alwdApi-list {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 12px;
+            margin-bottom: 0;
+
+            li {
+                display: flex;
+                align-items:center;
+                background-color: #ebebeb;
+                padding: 8px 16px;
+                border-radius: 8px;
+                border: 1px solid $gray-dd;
+                cursor: pointer;
+                transition: all 0.3s ease-in-out;
+                i{
+                    margin-right:8px;
+                    font-size: 14px;
+                }
+                &:hover {
+                    background-color: darken($color: #ebebeb, $amount: 5%);
+                    border-color: darken($color: #ebebeb, $amount: 5%);
+                }
+
+                p {
+                    margin-bottom: 0;
+                    font-size: 14px;
+                    line-height: 16px;
+                }
+            }
+            &.allowApi-lst{
+                li{
+                    background-color: #ebebeb;
+
+                    &:hover {
+                        background-color: darken($color: #ebebeb, $amount: 5%);
+                        border-color: darken($color: #ebebeb, $amount: 5%);
+                    }
+                }
+            }
+            &.selectedApi-list{
+                li{
+                    background-color: #c4e1f7;
+                    border-color: #4ba8ef;
+
+                    &:hover {
+                        background-color: darken($color: #c4e1f7, $amount: 5%);
+                        border-color: darken($color: #c4e1f7, $amount: 5%);
+                    }
+                }
+            }
+        }
+    }
+}
+.selctMrc-list{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px 16px;
+    // margin-bottom:30px;
+    .multiselect-native-select{
+        width:100%;
+        .merchnCond{
+            width:100% !important;
+            height:auto !important;
+            left:0;
+        }
+        .btn-group{
+            width:100%;
+            .custom-select{
+                width:100%;
+                background-color: #fff;
+                border: 1px solid #d6e8f0;
+                padding: 8px 30px 8px 15px;
+                border-radius: 4px;
+                font-size: 15px;
+                line-height: 18px;
+                font-weight:$fw-300;
+                text-align:left;
+                z-index:10;
+            }
+            .dropdown-menu{
+                margin-top: 40px;
+                width:100%;
+                padding: 8px 4px;
+                z-index:9;
+                .dropdown-item{
+                    border-radius:4px;
+                    margin-bottom:10px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    &:last-child{
+                        margin-bottom:0;
+                    }
+                    &.active{
+                        background-color:#e9f1f7;
+                    }
+                    .form-check{
+                        display:flex;
+                        align-items:center;
+                        margin-bottom:0;
+                        .form-check-input{
+                            margin-right:10px;
+                            margin-top: 0;
+                        }
+                        .form-check-label{
+                            margin-bottom:0;
+                            color:$black;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    i{
+        z-index:10;
+    }
+    // .form-check{
+    //     // width:calc(50% - 10px);
+    //     padding-left:0;
+    //     margin-bottom:0;
+    //     line-height:15px;
+    //     min-height: auto;
+    //     cursor: pointer;
+    //     .form-check-input{
+    //         display:none;
+    //         &:checked{
+    //             & +  .form-check-label{
+    //                 // background-color:$blue;
+    //                 color:$blue;
+    //             }
+    //         }
+    //     }
+    //     .form-check-label{
+    //         // background-color:$gray-dd;
+    //         color:$black;
+    //         text-transform:capitalize;
+    //         cursor: pointer;
+    //     }
+    // }
+}
 
 @import "responsive";
